# KlipNote

./: .coverage  .gitignore  .gitmodules  DEVELOPMENT.md  PROJECT_STRUCTURE.md  README.md  direct_transcribe.py  environment.yml  preliminary_concept.md  test-media-playback.html
.claude/: settings.local.json
.github/workflows/: accuracy-regression.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.belle2  Dockerfile.whisperx  alembic.ini.bak  docker-compose.multi-model.yaml  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-belle2.txt  requirements-common.txt  requirements-whisperx.txt  requirements.txt
backend/ai_services/providers/: streaming_whisperx_provider.py
backend/app/: __init__.py  celery_utils.py  config.py  main.py  models.py
backend/app/ai_services/: __init__.py  base.py  belle2_service.py  model_manager.py  model_router.py  schema.py  whisperx_service.py  whisperx_shim.py
backend/app/ai_services/enhancement/: __init__.py  base_refiner.py  base_segment_splitter.py  factory.py  pipeline.py  segment_splitter.py  timestamp_refiner.py  vad_manager.py
backend/app/ai_services/enhancement/vad_engines/: __init__.py  base_vad.py  silero_vad.py  webrtc_vad.py
backend/app/ai_services/optimization/: __init__.py  base.py  factory.py  heuristic_optimizer.py  whisperx_optimizer.py
backend/app/ai_services/quality/: __init__.py  models.py  validator.py
backend/app/cli/: __init__.py  compare_models.py  validate_quality.py
backend/app/core/: config.py  enums.py  logging_config.py
backend/app/schemas/: transcription.py
backend/app/services/: __init__.py  export_service.py  file_handler.py  redis_service.py
backend/app/tasks/: __init__.py  transcription.py
backend/backend/output/: round1.md
backend/backend/quality_metrics/: belle2_none_20251118_181736.json  belle2_none_20251118_182748.json
backend/scripts/: benchmark_optimizer.py  create_json_references.py  extract_reference_text.py  quality_ab_test.py  quick_test.py  test_workers.py
backend/scripts/ab_test/: README_AB_TESTING.md  ab_test_accuracy.py  ab_test_gibberish.py  ab_test_memory.py  ab_test_performance.py  ab_test_segments.py  consolidate_ab_results.py  run_all_ab_tests.bat  run_all_ab_tests.sh  transcribe_single_belle2.py  transcribe_single_whisperx.py
backend/scripts/ab_test/ab_test_results/: belle2_accuracy.json  belle2_gibberish.json  belle2_memory.json  belle2_performance.json  belle2_segments.json  belle2_zh_long_audio.json  belle2_zh_long_audio2.json  whisperx_accuracy.json  whisperx_zh_long_audio.json  whisperx_zh_long_audio2.json
backend/tests/: conftest.py  test_ai_services.py  test_ai_services_schema.py  test_api_endpoints.py  test_api_export.py  test_api_media.py  test_api_status_result.py  test_base_segment_splitter.py  test_belle2_integration.py  test_belle2_model_path.py  test_config.py  test_enhancement_factory.py  test_enhancement_pipeline.py  test_enhancement_pipeline_integration.py  test_enhancement_vad_manager.py  test_file_handler.py  test_model_router.py  test_optimization_factory.py  test_project_structure.py  test_quality_integration.py  test_quality_validator.py  test_redis_service.py  test_segment_splitter_integration.py  test_segment_splitter_merge.py  test_segment_splitter_performance.py  test_segment_splitter_punctuation.py  test_segment_splitter_text_length.py  test_services_belle2.py  test_services_export.py  test_timestamp_refiner.py  test_timestamp_refiner_integration.py  test_transcription_task.py  test_upload_endpoint.py  test_webrtc_vad_enhancement.py  test_whisperx_integration.py  test_whisperx_optimizer.py  test_whisperx_service.py
bmad/_cfg/: agent-manifest.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
bmad/bmm/: config.yaml
bmad/core/: config.yaml
docs/: PRD.md  api-reference.md  architecture.md  backlog.md  bmm-brainstorming-session-2025-11-02.md  bmm-product-brief-KlipNote-2025-11-03.md  bmm-workflow-status.yaml  developer-guide.md  domain-brief.md  enhancement-pipeline.md  epics.md  implementation-readiness-report-2025-11-04.md  index.md  phase-gate-story-3-2b.md  quality-validation.md  research-technical-2025-11-09.md  sprint-change-proposal-2025-11-05.md  sprint-change-proposal-2025-11-10.md  sprint-change-proposal-2025-11-14.md  sprint-change-proposal-2025-11-15.md  sprint-change-proposal-2025-11-16.md  sprint-change-proposal-2025-11-22.md  sprint-status.yaml  tech-spec-epic-3.md
docs/architecture-decisions/: ADR-004-multi-model-architecture.md  index.md
docs/deployment/: check-prerequisites.sh  multi-worker-deployment-guide.md
docs/diagrams/: HTML-prototype.html  requirement.md  theme.json  wireframe-klipnote-ui.excalidraw
docs/improvement/: project-status-and-gaps-2025-11-22.md  solution-design-2025-11-22.md
docs/retrospectives/: epic-1-retro-2025-11-07.md
docs/sprint-artifacts/: 1-1-project-scaffolding-and-development-environment.md  1-2-backend-api-upload-endpoint.md  1-3-celery-task-queue-and-whisperx-integration.md  1-6-frontend-progress-monitoring.md  2-1-media-playback-api-endpoint.md  2-2-frontend-media-player-integration.md  2-4-inline-subtitle-editing.md  2-6-frontend-export-functionality.md  2-7-mvp-release-checklist-and-final-validation.md  3-2a-pluggable-optimizer-architecture.md  3-2b-whisperx-integration-validation.md  4-1-multi-model-production-architecture.md  4-1b-frontend-model-selection.md  4-5-enhancement-pipeline-composition.md  sprint-status.yaml  tech-spec-epic-1.md  tech-spec-epic-2.md  tech-spec-epic-3.md  tech-spec-epic-4.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.vue
reference/: .env.local  pyproject.toml
reference/backend/ai_services/: model_manager.py
reference/backend/ai_services/providers/: base.py
reference/backend/app/utils/: audio_utils.py
temp/: 00_CLAUDE.md  02_morphological_analysis.md  03_brainstorming_session_complete.md  04_web_search.md  05_design_recommendation.md  06_story-1-1-recommendation.md  07_story-1-3-recommendation.md
(+101 files in other folders)
