[project]
name = "AudioAlchemist"
version = "0.1.0"
description = "An advanced audio processing and transcription service."
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "python-multipart>=0.0.7,<1.0.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>2.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "email-validator>=2.1.0.post1,<3.0.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3.0",
    "PyJWT>=2.10.1",
    "sqlmodel>=0.0.24",
    "alembic>=1.16.2",
    "psycopg[binary]>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "celery>=5.3.6,<6.0.0",
    "redis>=5.0.4,<6.0.0",
    "structlog>=23.2.0,<24.0.0",
    "sentry-sdk[fastapi]>=1.40.6,<2.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "emails>=0.6,<1.0",
    "jinja2>=3.1.4,<4.0.0",
    "httpx>=0.25.1,<1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    "pyannote.audio>=3.1.0",
    "faster-whisper>=0.9.0",
    "ctranslate2>=3.20.0",
    "openai-whisper",
    "nltk>=3.9.1",
    "mutagen>=1.47.0",
    "audioread>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "llvmlite>=0.40.0",
    "numba>=0.55.0",
    "whisperx @ file:///${PROJECT_ROOT}/backend/ai_services/whisperx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.23.5,<0.24.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "coverage>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "C4", "B", "A", "RUF"]
ignore = ["B008"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["legacy/"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
